<resources>

    <string name="app_name">Fidu</string>
    <string name="login">Entrar</string>
    <string name="signup">Cadastrar</string>
    <string name="logout">Sair</string>
    <string name="update_profile">Editar perfil</string>

    <string name="donor">doador</string>
    <string name="donee">instituição</string>
    <string name="donees">Instituições</string>

    <string name="name">Nome de exibição</string>
    <string name="name_is_empty">Nome de exibição não pode ser vazio</string>

    <string name="address">Endereço</string>
    <string name="address_empty">Endereço não pode ser vazio</string>

    <string name="password">Senha</string>
    <string name="password_empty">Senha não pode ser vazia</string>
    <string name="password_too_short">Sua senha deve pelo menos 6 caracteres</string>
    <string name="confirm_password">Confirme sua senha</string>
    <string name="password_doesnt_match">As senhas não correspondem</string>
    <string name="forgot_password">Esqueceu sua senha?</string>
    <string name="wrong_password">Senha incorreta</string>
    <string name="password_reset_sent">Sucesso! Verifique seu e-mail para resetar sua senha.</string>
    <string name="forgot_password_explanation">
        Insira seu e-mail abaixo e lhe enviaremos instruções para a definição de uma nova senha.
    </string>

    <string name="email">E-mail</string>
    <string name="email_empty">E-mail não pode ser vazio</string>
    <string name="email_invalid">E-mail inválido</string>
    <string name="inexistent_email">E-mail não cadastrado</string>
    <string name="email_already_in_use">E-mail já cadastrado</string>

    <string name="info_occupation">Área de Atuação:</string>
    <string name="info_description">Descrição:</string>
    <string name="info_founded_in">Ano de Fundação:</string>
    <string name="info_benefited">Beneficiados:</string>
    <string name="info_address">Endereço:</string>
    <string name="info_website">Website:</string>

    <string name="occupation">Área de Atuação</string>
    <string name="description">Descrição</string>
    <string name="founded_in">Ano de Fundação</string>
    <string name="benefited">Nº de Beneficiados</string>
    <string name="website">Website</string>

    <string name="empty_description">Descrição não pode ser vazio</string>
    <string name="invalid_founded_in">Ano de fundação inválido</string>
    <string name="invalid_benefited">Número de beneficiados inválido</string>

    <string name="your_profile">Seu Perfil</string>
    <string name="profile_image">Imagem de perfil (URL)</string>
    <string name="profile_updated">Perfil atualizado com sucesso</string>
    <string name="upload_photo">Inserir foto</string>

    <string name="search_donee">Procurar instituição</string>

    <string name="auth_success">Autenticado</string>
    <string name="auth_failed">A autenticação falhou</string>

    <string name="signup_success">Cadastro concluído com êxito.</string>
    <string name="signup_failed">Falha no cadastro</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_messages">Messagens</string>
    <string name="title_map">Mapa</string>
    <string name="title_profile">Perfil</string>
    <string name="title_donee_profile">Perfil da Instituição</string>
    <string name="title_home">Início</string>

    <string name="dialog_title_update_location">Nova Localização</string>
    <string name="dialog_body_update_location">Deseja salvar esse local como sua localização?</string>

    <string name="network_error">Problema na conexão com a internet.</string>
    <string name="default_error_message">Ocorreu um erro ao executar essa ação. Tente novamente</string>

    <string name="unknown_information">não informado</string>
    <string name="yes">Sim</string>
    <string name="no">Não</string>
    <string name="msg_confirm_logout">Tem certeza que deseja sair?</string>
    <string name="logout_title">Saindo</string>

    <string name="greeting_placeholder">Olá, {user}!</string>
    <string name="greeting_subtitle">Pronto para fazer o bem?</string>

    <string name="location_updated">Localização atualizada</string>

    <string name="API_KEY">AIzaSyDXprQRZijSyL3ruqqQV8fukd6IA9oer5M</string>
</resources>
