<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="br.edu.ufcg.fidu.views.fragments.DonorSignupFragment"
    android:gravity="center"
    android:orientation="vertical">

    <EditText
        android:id="@+id/etName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:background="@drawable/background_edittext"
        android:fontFamily="@font/altair_thin_trial"
        android:hint="@string/name"
        android:inputType="textPersonName"
        android:textColor="@color/colorText" />

    <EditText
        android:id="@+id/etEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:background="@drawable/background_edittext"
        android:fontFamily="@font/altair_thin_trial"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:textColor="@color/colorText" />

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:background="@drawable/background_edittext"
        android:fontFamily="@font/altair_thin_trial"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textColor="@color/colorText" />

    <EditText
        android:id="@+id/etPasswordConfirm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:background="@drawable/background_edittext"
        android:fontFamily="@font/altair_thin_trial"
        android:hint="@string/confirm_password"
        android:inputType="textPassword"
        android:textColor="@color/colorText" />

    <Button
        android:id="@+id/btnSignup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="58dp"
        android:background="@drawable/background_button_green"
        android:elevation="2dp"
        android:fontFamily="@font/altair_bold_trial"
        android:text="@string/signup"
        android:textColor="@android:color/white" />

</LinearLayout>