<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorDarkPrimary"
    android:orientation="vertical"
    android:padding="12dp"
    tools:context="br.edu.ufcg.fidu.views.activities.InitialActivity">

    <ImageView
        android:id="@+id/img_logo"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:contentDescription="@string/app_name"
        android:gravity="center"
        android:padding="32dp"
        app:srcCompat="@drawable/green_apple_fidu" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="bottom"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnLogin"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="8dp"
            android:layout_weight="1"
            android:backgroundTint="@android:color/white"
            android:fontFamily="@font/quicksand"
            android:padding="20dp"
            android:text="@string/login"
            android:textColor="@color/primaryText" />

        <Button
            android:id="@+id/btnCadastrar"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/quicksand"
            android:padding="20dp"
            android:text="@string/signup"
            android:textColor="@color/secondaryText" />

    </LinearLayout>

</LinearLayout>
