<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorDarkPrimary"
    tools:context="br.edu.ufcg.fidu.views.activities.SelectRoleActivity">

    <ImageView
        android:id="@+id/img_logo"
        android:layout_width="0dp"
        android:layout_height="75dp"
        android:layout_marginEnd="64dp"
        android:layout_marginStart="64dp"
        android:layout_marginTop="32dp"
        android:contentDescription="@string/app_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/green_apple_fidu" />

    <RadioGroup
        android:id="@+id/rgRole"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="64dp"
        android:layout_marginStart="64dp"
        android:layout_marginTop="16dp"
        android:checkedButton="@+id/rbtnDonor"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img_logo">

        <RadioButton
            android:id="@+id/rbtnDonor"
            style="@style/Widget.AppCompat.CompoundButton.RadioButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:buttonTint="@color/colorAccent"
            android:onClick="onRadioButtonClicked"
            android:text="@string/donor"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium.Inverse"
            android:textColor="@color/colorText"
            android:textSize="14sp" />

        <RadioButton
            android:id="@+id/rbtnDonee"
            style="@style/Widget.AppCompat.CompoundButton.RadioButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:buttonTint="@color/colorAccent"
            android:onClick="onRadioButtonClicked"
            android:text="@string/donee"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium.Inverse"
            android:textColor="@color/colorText"
            android:textSize="14sp" />

    </RadioGroup>

    <FrameLayout
        android:id="@+id/signup_content"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="32dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rgRole" />

</android.support.constraint.ConstraintLayout>
